nivasa-macros/tests/trybuild/controller_invalid_key.stderr
error: unknown `#[controller]` key `route`; expected `path` or `version`
 --> tests/trybuild/controller_invalid_key.rs:3:16
  |
3 | #[controller({ route: "/users" })]
  |                ^^^^^
