nivasa-macros/tests/trybuild/controller_invalid_key.rs
use nivasa_macros::controller;

#[controller({ route: "/users" })]
struct UsersController;

fn main() {}
